# poly1305

./: .ghci  .gitignore  CHANGELOG  README.md  flake.nix  ppad-poly1305.cabal
bench/: Main.hs  Weight.hs
cbits/: poly1305_arm.c
lib/Crypto/MAC/: Poly1305.hs
lib/Crypto/MAC/Poly1305/: Arm.hs
lib/Data/: Barrier.hs
test/: Main.hs
